--- a/telegraf.conf
+++ b/telegraf.conf
@@ -1,16 +1,30 @@
+[global_tags]
+  env = "dev"
+
 [agent]
   interval = "10s"
   round_interval = true
-  omit_hostname = true
+  metric_batch_size = 1000
+  metric_buffer_limit = 10000
+  collection_jitter = "0s"
+  flush_interval = "10s"
+  flush_jitter = "0s"
+  precision = ""
+  hostname = "telegraf"
+  omit_hostname = false
 
+# ========== Outputs ==========
 [[outputs.influxdb]]
   urls = ["http://influxdb:8086"]
-  database = "tel"
-  username = "user"
-  password = "1234"
+  database = "telegraf"
+  username = "telegraf"
+  password = "telegraf"
 
+# ========== Inputs ==========
 [[inputs.rabbitmq]]
-  url = "http://rabbitmq:15672"
-  username = "guest"
-  password = "guest"
+  # rabbitmq management plugin endpoint
+  url = "http://admin:admin@rabbitmq:15672"
+  # 필요한 경우 vhost나 큐 필터 등을 추가 설정 가능
+  # name_override = "my_rabbitmq"
+  # 필터 예시: queues = ["hello", "my_other_queue"]
 
